--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
-IG_APP_ID=706508378793598
-IG_APP_SECRET=ca306662033583cce5f038eac7cf5aa5
+INSTAGRAM_CLIENT_ID=706508378793598
+INSTAGRAM_CLIENT_SECRET=ca306662033583cce5f038eac7cf5aa5
+INSTAGRAM_REDIRECT_URI=http://localhost:8000/api/instagram/callback
+FRONTEND_URL=http://localhost:5173
 IG_VERIFY_TOKEN=myvibesync123
 IG_PAGE_ACCESS_TOKEN=
 
 MONGO_URI=
-
 OPENAI_API_KEY=
-
 ENVIRONMENT=development
 PORT=8000
