--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 INSTAGRAM_CLIENT_ID=706508378793598
 INSTAGRAM_CLIENT_SECRET=ca306662033583cce5f038eac7cf5aa5
-INSTAGRAM_REDIRECT_URI=https://vibesyncproject.vercel.app/api/instagram/callback
-FRONTEND_URL=https://vibesyncproject.vercel.app
+INSTAGRAM_REDIRECT_URI=http://localhost:8000/api/instagram/callback
+FRONTEND_URL=http://localhost:5173
 IG_VERIFY_TOKEN=myvibesync123
 IG_PAGE_ACCESS_TOKEN=
 
